--- a/style.css
+++ b/style.css
@@ -18,6 +18,10 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 width: 200px;
 background-color: lightblue;
 margin-left: 20px;
+border-style: solid;
+border-radius: 20px;
+border-width: 10px;
+border-color: black;
 }
 #awnser {
 font-size: 20px;
@@ -44,11 +48,6 @@ border-color: red;
 padding: 10px;
 }
 
-.ibox
-{
-  border-radius: 20px;
-  border-style: none;
-}
 #blue {
 color: blue;
 }
