--- a/style.css
+++ b/style.css
@@ -25,13 +25,19 @@ border-color: black;
 }
 #awnser {
 font-size: 20px;
-border-style: solid;
-border-width: 10px;
-padding: 10px;
-border-radius: 30px;
-border-color: #0390fc;
+
+
+
+
+
 font-family: "Courier New", monospace;
-  
+}
+#border {
+  border-width: 10px;
+  border-radius: 30px;
+  border-color: #0390fc;
+  border-style: solid;
+  padding: 10px;
 }
 #method {
 border-style: solid;
